--- a/resume.css
+++ b/resume.css
@@ -91,4 +91,10 @@ ul li {
     .pagebreak { page-break-before: always; } /* page-break-after works, as well */
 }
 
+.aws-certification {
+    white-space: nowrap; 
+    overflow: hidden;    
+    text-overflow: ellipsis; 
+}
+
 
